--- a/analytics/static/styles/dashboard_overall.css
+++ b/analytics/static/styles/dashboard_overall.css
@@ -1,4 +1,4 @@
-@import url('variables.css');
+@import url('../css/variables.css');
 
 .activity-card {
   background: var(--color-primary);        
