--- a/analytics/templates/analytics/dashboard_developers.html
+++ b/analytics/templates/analytics/dashboard_developers.html
@@ -107,15 +107,11 @@
           </div>
         </div>
       </div>
-      <!--graph and expanldable table listing-->
-      <div class="ci-bar-chart-container">
-        <canvas id="ciBarChart"></canvas>
-      </div>
     </div>
     <div class="activity-card">
         <!--graph and expanldable table listing-->
         <div class="ci-bar-chart-container">
-          <canvas id="ciBarChart"></canvas>
+          <canvas id="ciBarChart" width="400" height="200"></canvas>
         </div>
     </div>
     </div>
