--- a/analytics/templates/analytics/dashboard_developers.html
+++ b/analytics/templates/analytics/dashboard_developers.html
@@ -109,10 +109,27 @@
       </div>
     </div>
     <div class="activity-card">
-        <!--graph and expanldable table listing-->
+        <!--graph -->
         <div class="ci-bar-chart-container">
           <canvas id="ciBarChart" width="400" height="200"></canvas>
         </div>
+    </div>
+    <div class="activity-card">
+        <!--expanldable table listing-->
+        <table id="commitTable" class="commit-table">
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Time</th>
+              <th>Commit Message</th>
+              <th>CI Result</th>
+              <th>Lines +/-</th>
+              <th>Link</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody id="commitTableBody"></tbody>
+        </table>
     </div>
     </div>
     </div>
